--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,27 @@
 body {
         text-align: center;
         background-color: #eeeeee;
+        font-family: 'Poppins', sans-serif;
 }
 
 h1 {
     font-size: 6rem;
-    font-family: 'Poppins', sans-serif;
     font-weight: 500;
     color: #00adb5;
     text-shadow: 3px 0 #393e46;
 }
 
+p {
+    color: #00adb5;
+}
+
 footer {
     color: #00adb5;
-    font-family: 'Poppins', sans-serif;
     font-weight: 300;
 }
 
 .collection {
-    margin: 7% auto 10%;
+    margin: 2% auto 10%;
 }
 
 .w {
@@ -49,12 +52,16 @@ footer {
     background-image: url("images/kick.png");
 }
 
+.pressed {
+    box-shadow: 0 3px 4px 0 #00adb5;
+    opacity: 0.5;
+}
+
 .drum {
     width: 150px;
     height: 150px;
     outline: none;
     border: 10px solid #cecece;
-    font-family: 'Poppins', sans-serif;
     font-size: 6rem;
     font-weight: 500;
     color: #00adb5;
